# rust-8-days

day1/rot13/src/: main.rs  utils.rs
day3 - wc/wc/src/: main.rs
day3/tail/src/: main.rs
day4 - tail/tail/: Cargo.toml
day4/echoserver/src/: main.rs
day5 - echoserver/echoserver/src/: main.rs
day5/snake/src/: main.rs
day6 - unit tests/snake/src/: game.rs  main.rs
day6/snake/src/: game.rs
day7 - snake gui/snake/: Cargo.toml
day7 - snake gui/snake/src/: main.rs
day7/apiserver/src/: main.rs
day8 - api server/apiserver/: Cargo.toml
day8 - api server/apiserver/src/: notes_server.rs  simple_server.rs
day8/spider/src/: main.rs
day9 - hackernews/spider/: Cargo.toml
