[[bin]]
name = "helloworld"
path = "src/simple_server.rs"

[[bin]]
name = "notes"
path = "src/notes_server.rs"


[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"